2011-05-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Use "dd" instead
	of "head" and "tail".  There were problems with SunOS 5.9, and it
	performs better.

2011-05-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band): Fix port
	computation bug.  (Bug#8618)

2011-04-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-actions): Add POS argument.  Delete
	region between POS and (pos).

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band): Use
	`nil' position in `tramp-process-actions' call.
	(tramp-maybe-open-connection): Call `tramp-process-actions' with pos.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use `nil'
	position in `tramp-process-actions' call.

2011-04-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-file-attributes): Handle the case
	when the scripts fail.  Use `tramp-do-file-attributes-with-ls' then.
	(tramp-do-copy-or-rename-file-out-of-band): Do not check any longer
	whether `executable-find' is bound.

	* tramp-smb.el (tramp-smb-handle-copy-file): Fix docstring.

2011-03-12  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.1 released.

	* tramp-sh.el (tramp-methods): Exchange "%k" marker with options.

2011-03-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band): Do not
	use `tramp-file-name-port', because this returns also
	`tramp-default-port'.

2011-03-06  Juanma Barranquero  <lekktu@gmail.com>

	* tramp-cache.el: Don't set `kill-emacs-hook' on noninteractive
	sessions (bug#8137).

2011-02-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-append-tramp-buffers): Dump load-path shadows.

2011-02-22  Glenn Morris  <rgm@gnu.org>

	* tramp-gvfs.el: Fix spelling of "precede".

2011-02-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-rfn-eshadow-setup-minibuffer): Do not use